samples/_failures_safe/1761500385_dd8dc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0da149cf.c: In function ‘handle_state_complete’:
./samples/SAFE/__tmp_0da149cf.c:158:5: error: expected declaration or statement at end of input
  158 |     if (fgets(input, sizeof(input), stdin) != NULL) {
      |     ^~
./samples/SAFE/__tmp_0da149cf.c:158:5: error: expected declaration or statement at end of input
